tags/2013-08-29_cppreference/Archive/a40ddcc5099beae7052c8beb8e515871-d6c803482d553f395422ddf5510f4bb0/output
main.cpp:20:31: error: empty character constant
         std::cout << s << 'x';''
                               ^
main.cpp: In function 'int main()':
main.cpp:21:1: error: expected ';' before '}' token
 }
 ^
main.cpp:21:1: warning: statement has no effect [-Wunused-value]
